# mamba.cpp

./: .clang-format  .editorconfig  .gitignore  Taskfile.yml  kernels.metal  mamba.mm  meson.build  ml.h  ml.mm  mtl_impl.mm  test-requirements.txt
.helix/: languages.toml
Metal/: Metal.hpp
subprojects/: gguf-tools.wrap
subprojects/packagefiles/gguf-tools/: meson.build
tests/: test_mamba.mm  test_mamba.py
